--- a/shedevr.html
+++ b/shedevr.html
@@ -13,7 +13,7 @@
                     <label>Здоровье: 85%</label>
                     <label>Очки: 800</label>
                     <label>Интеллект: 15</label>
-                    <label>Стресс: 15%</label>
+                    <label>Усталость: 15%</label>
                     <button id="ChooseFemale">Выбрать этого персонажа</button>
                 </div>
                 <div class="character">
@@ -22,7 +22,7 @@
                     <label>Здоровье: 100%</label>
                     <label>Очки: 500</label>
                     <label>Интеллект: 10</label>
-                    <label>Стресс: 10%</label>
+                    <label>Усталость: 10%</label>
                     <button id="ChooseMale">Выбрать этого персонажа</button>
                 </div>
                 <div class="character">
@@ -31,7 +31,7 @@
                     <label>Здоровье: 600%</label>
                     <label>Очки: 1800</label>
                     <label>Интеллект: 3</label>
-                    <label>Стресс: -500%</label>
+                    <label>Усталость: -500%</label>
                     <button id="ChoosePokemon">Выбрать этого персонажа</button>
                 </div>
             </div>
@@ -50,18 +50,18 @@
                 <div class="stats">
                     <label>Твои характеристики:</label>
                     <label id="HP">Здоровье студента: 100%</label>
-                    <label id="Money">Очки: 500</label>
-                    <label id="KnowLedge">Знания студента: 10</label>
-                    <label id="Stress">Стресс: 10%</label>
+                    <label id="Points">Очки: 500</label>
+                    <label id="KnowLedge">Level: 10</label>
+                    <label id="Stress">Усталость: 10%</label>
                     <label id="TotalSteps">Ход: 0</label>
-                    <label>Если здоровье упадет до 0 или стесс привысит 100, ты умрёшь!</label>
+                    <label>Если Здоровье студента упадет до 0 или Усталость привысит 100, ты умрёшь!</label>
                 </div>
             </div>
             <div class="infos">
                 <span>Вы находитесь в : <label id="Location">Локация</label></span>
                 <p id="Result">результат ответа</p>
-                <span>Варианты выхода: <label id="Ways">столовая, аудитория и военком(армия)</label></span>
-                <input id="inp" type="text" placeholder="куда хочешь пойти?">
+                <span>Куда ходить?: <label id="Ways">столовая, аудитория и военком(армия)</label></span>
+                <input id="inp" type="text" placeholder="и?">
                 <button id="Step">Пойти</button>
             </div> 
         </div>
